--- a/demo/src/app/students/students.component.css
+++ b/demo/src/app/students/students.component.css
@@ -1,21 +1,32 @@
 .students-container .bold {
-  color: #ccc;
-  font-style: italic;
-  font-weight: bold;
+    color: #ccc;
+    font-style: italic;
+    font-weight: bold;
 }
 
 .students-container .little-font {
-  color: #ccc;
-  font-style: italic;
-  font-size: 12px;
+    color: #ccc;
+    font-style: italic;
+    font-size: 12px;
 }
 
-form .add-border label{
-  border: 2px solid gray;
-  border-radius: 2px;
+form .add-border label {
+    border: 2px solid gray;
+    border-radius: 2px;
 }
 
-form .add-border input{
-  border: 2px solid gray;
-  border-radius: 2px;
+form .add-border input {
+    border: 2px solid gray;
+    border-radius: 2px;
+}
+
+form .ng-dirty.ng-invalid {
+    border: 1px solid red;
+}
+
+form .error-tip {
+    font-size: 13px;
+    font-weight: bold;
+    color: red;
+    margin: auto 0 auto 15px;
 }
